--- a/Prototype/Prototype/Prototype.csproj
+++ b/Prototype/Prototype/Prototype.csproj
@@ -118,9 +118,14 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColorStreamRenderer.cs" />
+    <Compile Include="DepthStreamRenderer.cs" />
+    <Compile Include="KinectChooser.cs" />
+    <Compile Include="Object2D.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="SkeletonStreamRenderer.cs" />
     <Compile Include="sprites.cs" />
   </ItemGroup>
   <ItemGroup>
